--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="H1B Wage Level — Find US jobs with visa sponsorship. Access 500,000+ verified roles with H-1B, Green Card, OPT/CPT, TN, E-3 and J-1 sponsorship." />
+    <title>H1B Wage Level — Land Your Dream Job in the U.S.</title>
   </head>
   <body>
     <div id="root"></div>
