logo changed to H1-B

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="H1B Wage Level — Find US jobs with visa sponsorship. Access 500,000+ verified roles with H-1B, Green Card, OPT/CPT, TN, E-3 and J-1 sponsorship." />
-    <title>H1B Wage Level — Land Your Dream Job in the U.S.</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="H1-B Wage Level — Find US jobs with visa sponsorship. Access 500,000+ verified roles with H-1B, Green Card, OPT/CPT, TN, E-3 and J-1 sponsorship." />
+  <title>H1-B Wage Level — Land Your Dream Job in the U.S.</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
